# xrcs

./: .gitignore  .pre-commit-config.yaml  .yamllint  CONTRIBUTING.md  Makefile  README.md  mkdocs.yaml  pyproject.toml  ruff.toml
.github/workflows/: cd.yaml  ci.yaml
docs/: README.md
docs/source/: index.md
docs/source/api/: app.md  models.md  screens.md  storage.md
requirements/: requirements-all.txt  requirements.txt
src/: main.py
src/models/: exercise.py  profile.py
src/screens/: main_screen.py  profile_screen.py  screens.kv  workout_list_screen.py  workout_planning_screen.py
src/storage/: storage.py
src/utils/: storage.py
src/views/: main_screen.py  profile_screen.py  workout_list_screen.py  workout_planning_screen.py
tests/: conftest.py  test_main.py
tests/models/: test_exercise.py  test_profile.py
tests/screens/: test_main_screen.py  test_profile_screen.py  test_workout_list_screen.py  test_workout_planning_screen.py
tests/storage/: test_storage.py
